# yuyin-zhuanxie

./: .gitignore  CHANGELOG.md  NOTICE  README.md  YuyanZhuanxie.vbs  app_launcher.py  config.example.json  install.ps1  package.ps1  pyproject.toml  requirements.txt  交接与版本日志.md  语言转写.bat
tests/: test_config.py  test_deepseek.py  test_gui_processing.py  test_history.py  test_recorder.py  test_text_tools.py
yuyin_zhuanxie/: __main__.py  asr.py  autostart.py  cli.py  clipboard.py  config.py  deepseek.py  gui.py  gui_modern.py  history.py  recorder.py  secrets.py  single_instance.py  text_tools.py  winfocus.py
